--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
+    "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.46.0",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "framer-motion": "^10.16.1",
     "next": "13.4.19",
     "prisma": "^5.1.1",
     "react": "18.2.0",
