--- a/package.json
+++ b/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.5.2",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.1.1",
     "@stripe/react-stripe-js": "^1.16.5",
     "@stripe/stripe-js": "^1.46.0",
-    "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "daisyui": "^3.7.3",
     "framer-motion": "^10.16.1",
+    "micro": "^10.0.1",
     "next": "13.4.19",
     "prisma": "^5.1.1",
     "react": "18.2.0",
@@ -28,6 +30,7 @@
     "zustand": "^4.3.3"
   },
   "devDependencies": {
+    "@types/node": "^20.5.9",
     "autoprefixer": "^10.4.15",
     "postcss": "^8.4.28",
     "tailwindcss": "^3.3.3"
